Wed Oct 19 16:30:35 UTC 2011  William R. Otte  <wotte@dre.vanderbilt.edu>

        * dance/DAnCE_Utility.h:

          Add missing export macro.

Wed Oct 19 05:03:16 UTC 2011  William R. Otte  <wotte@dre.vanderbilt.edu>

        * tools/Domain_Validator/Domain_Validator.mpc:

          Attempt at windows compile/linking issue.

Mon Oct 17 17:27:17 UTC 2011  William R. Otte  <wotte@dre.vanderbilt.edu>

        * dance/Plan_Launcher/Plan_Launcher.mpc:
          stab at a static linking problem.

        * tools/Domain_Validator/CORBA/CORBA_Domain_Validator_impl.cpp:

          warnings.

Mon Oct 17 06:15:45 UTC 2011  William R. Otte  <wotte@dre.vanderbilt.edu>

        * tools/Domain_Validator/CORBA/CORBA_Domain_Validator.mpc:

          Missing from previous commit.

Fri Oct 14 14:47:22 UTC 2011  William R. Otte  <wotte@dre.vanderbilt.edu>

        * MPC/config/dance_domain_validator.mpb:

          fuzz.

Fri Oct 14 14:01:41 UTC 2011  William R. Otte  <wotte@dre.vanderbilt.edu>

        * MPC/config/dance_domain_validator.mpb:

          Missing from a previous commit.

Fri Oct 14 02:31:06 UTC 2011  William R. Otte  <wotte@dre.vanderbilt.edu>

        * tools/Domain_Validator/Domain_Validator.idl:
        * tools/Domain_Validator/Domain_Validator.mpc:

          Fuzz.

Thu Oct 13 22:38:44 UTC 2011  William R. Otte  <wotte@dre.vanderbilt.edu>

        * dance/Plan_Launcher/Plan_Launcher.cpp:
        * tests/Plan_Launcher/NM-Delay/NodeMap.cdd:
        * tests/Plan_Launcher/NM-Delay/run_test.pl:
        * tools/Domain_Validator/CORBA/CORBA_Domain_Validator_impl.cpp:

          Added capability for the domain validator to check the liveness of the
          ExecutionManager.

Thu Oct 13 22:25:39 UTC 2011  William R. Otte  <wotte@dre.vanderbilt.edu>

        * tests/Plan_Launcher/NM-Delay:
        * tests/Plan_Launcher/NM-Delay/Deployment.cdp:
        * tests/Plan_Launcher/NM-Delay/NodeMap.cdd:
        * tests/Plan_Launcher/NM-Delay/run_test.pl:
