@@ -3,6 +3,7 @@
 project (DAnCE_Split_Plan_Impl) : dance_lib, dance_stub, dance_deployment_stub, dance_output, dance_logger, install {
   dynamicflags += DANCE_SPLIT_PLAN_BUILD_DLL
   includes += $(DANCE_ROOT)/tools
+
   Source_Files {
     Node_Splitter.cpp
     Locality_Splitter.cpp
@@ -15,7 +16,7 @@ project (DAnCE_Split_Plan_Impl) : dance_lib, dance_stub, dance_deployment_stub, 
 }
 
 project (DAnCE_Split_Plan_Exec) : dance_exe, dance_output, dance_split_plan, \
-        avoids_ace_for_tao, dance_convert_plan, dance_logger, install {
+        avoids_ace_for_tao, dance_convert_plan, dance_logger, install, openmp {
   exename = dance_split_plan
 
   Source_Files {
